# backend_learnings

./: Cargo.toml
src/: main.rs
src/config/: mod.rs
src/database/: mod.rs
src/errors/: mod.rs
src/models/: config.rs  filter.rs  functions.rs  greetings.rs  jwt.rs  mod.rs  pagination.rs  products.rs  search.rs  sorting.rs  users.rs
src/routing/: mod.rs  products.rs
src/services/: products.rs
