[package]
name = "backend_learnings"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
axum-extra = { version = "0.12.3", features = ["typed-header"] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.8", features = ["timeout", "trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
